2014-05-31  Charlie Zender  <zender@uci.edu>

	* NCO 4.4.5 release procedure:
 	Changes since nco-4_4_4: fxm
	cd ~/nco;cvs tag -d nco-4_4_5;cvs tag -d nco-4_4_5-1
	cd ~/nco;cvs commit -m "Preparing nco-4.4.5 release"
	cvs tag -c nco-4_4_5;cvs tag -c nco-4_4_5-1

	* Mac OS X compatibility with bld/Makefile complete. No	regressions!
	Using MacPorts netCDF 4.3.1, Xcode 5.1, GNU coreutils (for cut)

2014-05-29  Charlie Zender  <zender@uci.edu>

	* NCO 4.4.4 release procedure:
 	Changes since nco-4_4_3: -x tolerance, --rad orphans, CERES, mmr, ncwa msk
	cd ~/nco;cvs tag -d nco-4_4_4;cvs tag -d nco-4_4_4-1
	cd ~/nco;cvs commit -m "Preparing nco-4.4.4 release"
	cvs tag -c nco-4_4_4;cvs tag -c nco-4_4_4-1

2014-05-28  Charlie Zender  <zender@uci.edu>

	* Update --mask_condition documentation

2014-05-27  Charlie Zender  <zender@uci.edu>

	* Regression test for negative-valued ncwa --mask_condition works

	* Isolated bug: ncap_ncwa_scn() lexing ignores msk_val minus sign in conditions
	Notes in ncap_lex.l near rules for parsing doubles and long doubles
	Does same problem exist in ncap2 treatment of conditions with negative numbers?

2014-05-26  Charlie Zender  <zender@uci.edu>

	* Start using NC_FILL_STRING

	* Leave ncap (not ncap2) bug found by clang in ncap_lex.l because ncap is deprecated

	* Fix units bug found by clang in nco_aux.c:nco_find_lat_lon()

	* Tidy to quiet clang warnings

2014-05-23  Charlie Zender  <zender@uci.edu>

	* ncdismember handles whitespace in group names in ncatted phase

2014-05-21  Charlie Zender  <zender@uci.edu>

	* Change ncdismember to use eval so ${opt}=${5} may contain multiple whitespace-separated arguments

	* Implement --grp_xtr_var_xcl for ncdismember. Fixes problems for TES, SMAP data.

2014-05-20  Charlie Zender  <zender@uci.edu>

	* Improve ncks -b --bnr --fl_bnr documentation

2014-05-19  Charlie Zender  <zender@uci.edu>

	* Tweak chunking for 1D record variables

2014-05-15  Charlie Zender  <zender@uci.edu>
